# silabs_usb_xpress

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: linux.yml  windows.yml
examples/: usb_xp.rs
src/: SiUSBXp.c  bindings.rs  lib.rs
