[package]
name = "silabs_usb_xpress"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
links = "usb-1.0"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
