[package]
name = "silabs_usb_xpress"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
description = "Silicon Labs USB Xpress driver"
repository = "https://github.com/fMeow/silabs_usb_xpress"
documentation = "https://docs.rs/silabs_usb_xpress"
keywords = ["usbxpress", "driver", "USB"]
exclude = [
    ".gitignore",
    ".github",
    "tests/**/*",
]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
